# universal_modloader

./: LICENSE  README.ja.md  README.md  initialize.bat  initialize.sh  loader.py  pyproject.toml
examples/fastapi_evil_security/: .gitignore  README.ja.md  README.md  app.py  models.py  pyproject.toml
examples/fastapi_evil_security/mods/: master_password.py  steal_password.py
examples/modded_print/: .gitignore  README.ja.md  README.md  pyproject.toml
examples/modded_print/mods/: add_time.py  rainbow.py  smile.py
examples/pandas_hack/: .gitignore  README.ja.md  README.md  main.py  pyproject.toml
examples/pandas_hack/mods/: check_execution_time.py  check_result.py  prograss_bar.py
examples/simple_cli_rpg/: README.ja.md  README.md  main.py  pyproject.toml
examples/simple_cli_rpg/mods/: custom_player_name.py  no_sleep_time.py  zero_damage.py
examples/time_debugging/: README.ja.md  README.md  main.py  pyproject.toml
examples/time_debugging/mods/: leap_year.py
examples/tkinter_pytools/: README.ja.md  README.md  main.py  pyproject.toml
examples/tkinter_pytools/mods/: hash_copy.py
examples/tkinter_pytools/mods/mod_menu/: __init__.py  languages.py  theme.py
examples/tkinter_pytools/mods/mod_menu/settings_window/: gui.py  language.py  theme.py
mods/universal_modloader/: __init__.py  core.py  decorator.py  enums.py  install.py
mods/universal_modloader/core/: analysis.py  generation.py  importer.py  runtime.py  transformer.py
